src/objects/Lead__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Lead</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>